# biometric_count

./: pyproject.toml
biometric_project/: __init__.py
biometric_project/capture/: hand_capture.py
biometric_project/connection/: connection.py  rtsp_camera_connection.py  webcam_connection.py
tests/: __init__.py
