[tool.poetry]
name = "biometric-project"
version = "0.1.0"
description = ""
authors = ["Rodr1goTavares <rodr1gowzxz2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
